Fri Aug  8 14:54:28 1997  Olaf Bachmann  <obachman@mathematik.uni-kl.de>

	* Makefile.in ndbm.[cc,h]: Together with krueger: Added files
	  ndbm.[cc,h]; no longer linking with libdbm, instead,
	  user supplied files; added dbm_test; small changes to sing_dbm.cc

Fri Aug  8 12:56:44 MET DST 1997
        * hannes: introduced "div" for integer division
          grammar.*, iparith.cc, singular.doc
        * changed version to 1.1.2/August

Thu Aug  7 14:51:59 1997  Olaf Bachmann  <obachman@mathematik.uni-kl.de>

	* mpsr_Get.cc (GetCopCommandLeftv): made +/* to binary ops

	* longrat.[h,cc]: added number   nlInit(number i) to initialize a
		  number, i.e. get it into the right Singular state

Wed Jul 16 12:57:22 MET DST 1997: hannes
        * introduced '.singularrc', modified loading of satndard.lib 
          (tesths.cc)
Tue Jul 15 13:57:46 MET DST 1997: hannes
        * added call to proc in from standard.lib in tesths.cc

Wed Jul  9 17:50:23 MET DST 1997: hannes/siebert
        * added new type (resolution)
        -> extra.cc, ipid.cc, iparith.cc, ipconv.cc, syz.h, syz1.cc

Fri Jun 20 12:18:10 1997  Olaf Bachmann  <obachman@ratchwum.mathematik.uni-kl.de (Olaf Bachmann)>

	* tesths.cc (main): fixed condition of mprs_ttGen execution

Thu Jun 19 10:49:10 1997  Olaf Bachmann  <obachman@ratchwum.mathematik.uni-kl.de (Olaf Bachmann)>

	* mpsr_Put.h: corrected efinitions of MP_AnnotReqValTree, MP_AnnotReqValNode

Tue Jun 17 11:47:47 1997  Olaf Bachmann  <obachman@ratchwum.mathematik.uni-kl.de (Olaf Bachmann)>

	* Makefile.in (Singular): added mod2.h to dependencies of iparith.inc

	* tok.h: no discrimination of mac for inline definition any more

Wed Jun 11 09:56:05 1997  Olaf Bachmann  <obachman@ratchwum.mathematik.uni-kl.de (Olaf Bachmann)>

	* mpsr_Tok.cc (cmd_dictcops): changed names of some MP_Cops

	* longrat.[cc,h], tesths.cc, Makefile.in, configure.in: 
	  added support for smallgmp
