@@ -4,7 +4,7 @@
 
 //**************************************************************************/
 //
-// $Id: sing_dbm.cc,v 1.6 1997-08-12 14:54:52 Singular Exp $
+// $Id: sing_dbm.cc,v 1.7 1997-08-12 17:14:44 Singular Exp $
 //
 //**************************************************************************/
 //  'sing_dbm.cc' containes command to handle dbm-files under
@@ -33,9 +33,6 @@ typedef struct {
   int first;      // firstkey to look for?
 } DBM_info;
 
-//extern char *getenv(char *var);
-extern char *index(char *str, char c);
-
 //**************************************************************************/
 BOOLEAN dbOpen(si_link l, short flag)
 {
@@ -45,22 +42,21 @@ BOOLEAN dbOpen(si_link l, short flag)
 
   if((flag & SI_LINK_WRITE)
   || ((l->mode!=NULL)&&
-    ((l->mode[0]='w')||(l->mode[1]='w')))
+    ((l->mode[0]=='w')||(l->mode[1]=='w')))
   )
   {
     dbm_flags = O_RDWR | O_CREAT;
     mode = "rw";
     flag|=SI_LINK_WRITE;
   }
-  if ((db = (DBM_info *)malloc(sizeof *db)) == 0)
-  {
-    return TRUE;
-  }
-  if( (db->db = dbm_open(l->name, dbm_flags, 0664 )) != NULL )
+  if (((db = (DBM_info *)Alloc(sizeof *db)) != NULL)
+  &&((db->db = dbm_open(l->name, dbm_flags, 0664 )) != NULL ))
   {
     db->first=1;
-    if(flag & SI_LINK_WRITE) SI_LINK_SET_RW_OPEN_P(l);
-    else SI_LINK_SET_R_OPEN_P(l);
+    if(flag & SI_LINK_WRITE)
+      SI_LINK_SET_RW_OPEN_P(l);
+    else
+      SI_LINK_SET_R_OPEN_P(l);
     l->data=(void *)(db);
     FreeL(l->mode);
     l->mode=mstrdup(mode);
@@ -75,7 +71,7 @@ BOOLEAN dbClose(si_link l)
   DBM_info *db = (DBM_info *)l->data;
 
   dbm_close(db->db);
-  free(db);
+  Free((ADDRESS)db,(sizeof *db));
   l->data=NULL;  
   SI_LINK_SET_CLOSE_P(l);
   return FALSE;
@@ -108,8 +104,10 @@ leftv dbRead2(si_link l, leftv key)
   }
   else
   {
-    if(db->first) d_value = dbm_firstkey((DBM *)db->db);
-    else d_value = dbm_nextkey((DBM *)db->db);
+    if(db->first)
+      d_value = dbm_firstkey((DBM *)db->db);
+    else
+      d_value = dbm_nextkey((DBM *)db->db);
 
     v=(leftv)Alloc0(sizeof(sleftv));
     v->rtyp=STRING_CMD;
@@ -176,25 +174,29 @@ BOOLEAN dbWrite(si_link l, leftv key)
   }
   else
   {
-    WerrorS("write(`DBM link`,`key string`,`data string`) expected");
+    WerrorS("write(`DBM link`,`key string` [,`data string`]) expected");
   }
   return b;
 }
 //**************************************************************************/
-char *dbStatus(si_link l, char *request)
-{
-  if (strcmp(request, "read") == 0)
-  {
-    if (SI_LINK_R_OPEN_P(l)) return "ready";
-    else return "not ready";
-  }
-  else if (strcmp(request, "write") == 0)
-  {
-    if (SI_LINK_W_OPEN_P(l)) return "ready";
-    else return "not ready";
-  }
-  else return "unknown status request";
-}
+//char *dbStatus(si_link l, char *request)
+//{
+//  if (strcmp(request, "read") == 0)
+//  {
+//    if (SI_LINK_R_OPEN_P(l))
+//      return "ready";
+//    else
+//      return "not ready";
+//  }
+//  else if (strcmp(request, "write") == 0)
+//  {
+//    if (SI_LINK_W_OPEN_P(l))
+//      return "ready";
+//    else
+//      return "not ready";
+//  }
+//  else return "unknown status request";
+//}
 //**************************************************************************/
 si_link_extension slInitDBMExtension(si_link_extension s)
 {
@@ -205,7 +207,8 @@ si_link_extension slInitDBMExtension(si_link_extension s)
   s->Write=dbWrite;
   //s->Dump=NULL;
   //s->GetDump=NULL;
-  s->Status=dbStatus;
+  //s->Status=dbStatus;
+  s->Status=slStatusAscii;
   s->type="DBM";
   return s;
 }
